--- a/li.thi.html
+++ b/li.thi.html
@@ -11,7 +11,7 @@
         <div class="ashita">
             明日は鳥を見に行きまちゅ
         </div> 
-        <div>
+        <div class="return">
             <a href="index.html">戻る</a>
         </div>   
     </body>
