--- a/li.thi.html
+++ b/li.thi.html
@@ -9,7 +9,8 @@
 </head>
     <body>
         <div class="ashita">
-            明日は鳥を見に行きまちゅ
+            明日は<br>
+            鳥を見に行きまちゅ
         </div> 
         <div class="return">
             <a href="index.html">戻る</a>
