--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
             ちゅんこっこ
         </p>
         <ul class="list">
-            <li><a href="li.thi.html">
-                ☆ち</a>
+            <li><a href="li.thi.html">☆ち</a>
             </li>
-            <li>
-                 ☆ゅ
+            <li>☆ゅ
             </li>
-            <li>
-                ☆ん
+            <li>☆ん
             </li>
         </ul>
     </body>
