--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class="list">
             <li><a href="li.thi.html">☆ち</a>
             </li>
-            <li>☆ゅ
+            <li><a href="li.xyu.html">☆ゅ</a>
             </li>
             <li>☆ん
             </li>
