--- a/li.xyu.html
+++ b/li.xyu.html
@@ -11,7 +11,7 @@
         <div class="potechi">
             ポテチ人間
         </div> 
-        <div>
+        <div class="return">
             <a href="index.html">戻る</a>
         </div>   
     </body>
