--- a/li.xyu.html
+++ b/li.xyu.html
@@ -9,7 +9,8 @@
 </head>
     <body>
         <div class="potechi">
-            ポテチ人間
+            ポテチ人間<br>
+            POTECHI MAN
         </div> 
         <div class="return">
             <a href="index.html">戻る</a>
