--- a/li.xyu.html
+++ b/li.xyu.html
@@ -11,6 +11,7 @@
         <div class="potechi">
             ポテチ人間<br>
             POTECHI MAN
+            potechi man
         </div> 
         <div class="return">
             <a href="index.html">戻る</a>
