--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </li>
             <li><a href="li.xyu.html">☆ゅ</a>
             </li>
-            <li>☆ん
+            <li><a href="">☆ん</a>
             </li>
         </ul>
     </body>
